# Aptadynamik-PRAMA-Protokol-LogaProb_Monitor

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt
docs/: early_warning_evaluation.md  empirical_result_001.md  empirical_result_002.md  empirical_result_003.md  empirical_result_004.md  empirical_result_005.md  empirical_result_006.md  empirical_result_007.md  empirical_result_008_negative_result.md  external_benchmark_adapter.md  failure_modes.md  future_prama_evaluation.md  logprob_mapping.md  method.md  onset_experiment_protocol.md  philosophy.md  prama_axial_inherence_protocol.md  prama_minimal_structural_perturbation_study.md  prama_phase_signature_protocol.md  prama_regime_classification_v0.2.2.md  quickstart.md  regime_benchmark.md  sensitivity_analysis.md  v0.2-prama-components-acople.md  v2_geometry_vs_dynamics.md
examples/: run_deepseek_demo.py  run_gemini_demo.py  run_offline_verify.py
frontend/: prama_monitor.html
protocols/: empirical_result_008_early_warning_benchmark.md  minimal_structural_perturbations.yaml
results/: results.json
scripts/: analyze_cocc_prama_windows.py  analyze_v2_replications.py  compare_v2_trajectories.py  evaluate_early_warning.py  export_regime_benchmark_evidence.py  onset_experiment.py  patch_v2_entropy_variance.py  prama_axial_inherence_runner.py  prama_chat_server.py  prama_closure_sweep_runner.py  prama_components_runner.py  prama_perturbation_study_runner.py  prama_phase_signature_runner.py  prama_sensitivity_sweep.py  psi_xi_partial.py  run_external_benchmark_prama_eval.py  (+3 more)
(+68 files in other folders)
